--- a/faq.html
+++ b/faq.html
@@ -19,6 +19,7 @@
         <a href="tentang.html">Tentang</a>
         <a href="kontak.html" target="_blank">Kontak</a>
         <a href="#">FAQ</a>
+        <a href="promo.html" target="_blank">Promo</a>
       </nav>
 
       <!-- Tombol Toggle Dark Mode -->
@@ -78,6 +79,7 @@
     <!-- Footer -->
     <footer>
       <p>© A12.2024.07183 Muhammad Rafly Setyo Handika</p>
+      <span id="clock"></span>
     </footer>
   </div>
 
