--- a/kontak.html
+++ b/kontak.html
@@ -19,6 +19,7 @@
         <a href="tentang.html">Tentang</a>
         <a href="kontak.html">Kontak</a>
         <a href="faq.html" target="_blank">FAQ</a>
+        <a href="promo.html">Promo</a>
       </nav>
 
       <!-- Tombol Toggle Dark Mode -->
@@ -62,6 +63,7 @@
     <!-- Footer -->
     <footer>
       <p>© A12.2024.07183 Muhammad Rafly Setyo Handika</p>
+      <span id="clock"></span>
     </footer>
   </div>
 
