--- a/tentang.html
+++ b/tentang.html
@@ -19,6 +19,7 @@
         <a href="#">Tentang</a>
         <a href="kontak.html" target="_blank">Kontak</a>
         <a href="faq.html">FAQ</a>
+        <a href="promo.html">Promo</a>
       </nav>
 
       <!-- Tombol Toggle Dark Mode -->
@@ -62,6 +63,7 @@
     <!-- Footer -->
     <footer>
       <p>© A12.2024.07183 Muhammad Rafly Setyo Handika</p>
+      <span id="clock"></span>
     </footer>
   </div>
 
