--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="tentang.html" target="_blank">Tentang</a>
         <a href="kontak.html" target="_blank">Kontak</a>
         <a href="faq.html" target="_blank">FAQ</a>
+        <a href="promo.html" target="_blank">Promo</a>
       </nav>
 
       <!-- Tombol Toggle Dark Mode -->
@@ -94,6 +95,7 @@
     <!-- Footer -->
     <footer>
       <p>© A12.2024.07183 Muhammad Rafly Setyo Handika</p>
+      <span id="clock"></span>
     </footer>
   </div>
 
